--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.1",
     "antd": "^5.20.6",
+    "antd-phone-input": "^0.3.18",
+    "dayjs": "^1.11.19",
     "i18next": "^23.15.1",
     "next": "14.2.12",
+    "next-intl": "^4.5.8",
     "react": "^18",
     "react-dom": "^18",
-    "redux-toolkit": "^1.1.2"
+    "react-redux": "^9.2.0",
+    "redux-toolkit": "^1.1.2",
+    "sass": "^1.95.1"
   },
   "devDependencies": {
     "@types/node": "^20",
